hard-gists/7065820/run.log
=== Docker Run Log for 7065820 ===
Started at: Mi 29. Okt 16:58:45 CET 2025

[2025-10-29 16:58:46] START: Running container for 7065820
[2025-10-29 16:58:46] SUCCESS: Container b6043decea08f553529fbe6e36406379e28c42d507e611ba87a92f8b9af0f8b9 started for 7065820
=== Container logs for 7065820 ===
  File "/snippet.py", line 8
    print './png2rgb565.py HOGE.png'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7065820 ===
[2025-10-29 16:58:48] INFO: Container b6043decea08f553529fbe6e36406379e28c42d507e611ba87a92f8b9af0f8b9 has stopped
